--- a/webspring-2013/1.html
+++ b/webspring-2013/1.html
@@ -647,7 +647,7 @@ between them via hyperlinks.
 				</h3>
 			</li>
 			<li>
-				<h3><a href='http://www.nytimes.com/2013/05/19/books/review/to-save-everything-click-here-by-evgeny-morozov.html?_r=0'>Big Data is Watching You, a review of To Save Everything, Click Here.</a></h3>
+				<h3><a href='http://www.nytimes.com/2013/05/19/books/review/to-save-everything-click-here-by-evgeny-morozov.html?_r=0'>Big Data is Watching You, a review of To Save Everything, Click Here, by Evgeny Morozov.</a></h3>
 			</li>
 			<li>
 				<h3><a href='http://www.amazon.com/HTML-CSS-Design-Build-Websites/dp/1118008189/ref=sr_1_1?ie=UTF8&qid=1359387442&sr=8-1&keywords=html+%26+css'>Buy this Book</a>
