--- a/webspring-2013/1.html
+++ b/webspring-2013/1.html
@@ -183,7 +183,7 @@
 
 <article class='slide slide-subhead'>
 <h1>Mailing List</h1>
-<p>You should be a member of our Google group<br/><a href='http://groups.google.com/group/webfall2013'>http://groups.google.com/group/webfall2013</a></p>
+<p><a href='https://groups.google.com/forum/#!forum/web-spring-2014'>Join the Google Group</a></p>
 </article>
 
 <article class='slide slide-title'>
