added theme/default and deck.hash.js

--- a/webspring-2013/1.html
+++ b/webspring-2013/1.html
@@ -674,13 +674,13 @@ between them via hyperlinks.
 	<h1>Questions and/or Problems?</h1>
 	<ul>
 		<li>
-		<h3>if it's a general question that the rest of the class might benefit from seeing post a message to me at <a href="http://groups.google.com/group/webfall2013"> google groups</a></h3>
+		<h3>if it's a general question that the rest of the class might benefit from seeing post a message to me at <a href="https://groups.google.com/d/forum/web-spring-2014"> google groups</a></h3>
 		</li>		
 		<li>	
 		<h3>email me : <a href="mailto:zrkaiser@massart.edu">zrkaiser@massart.edu</a></h3>
 		</li>
 		<li>
-		<h3>I have office hours here at MassArt in T609 on Mondays from 1:00-2:00</h3>
+		<h3>I have office hours here at MassArt in T619 on Mondays from 1:00-2:00</h3>
 		</li>
 	</ul>
 </article>		
