--- a/webspring-2013/index.html
+++ b/webspring-2013/index.html
@@ -32,7 +32,7 @@
 	<section id="material">	
 		<h2>Class Material</h2>
 			<h3><a href="1.html">Intro </a>
-				<span class="homework"><a href="http://marthar.github.io/webfall-2013/1.html#slide-156">- homework</a></span></h3>
+				<span class="homework"><a href="http://zacharykaiser.github.io/webfall-2013/1.html#slide-156">- homework</a></span></h3>
 			<!--<h3><a href="2.html">HTML Semantics</a>
 				<span class="homework"><a href="http://marthar.github.io/webfall-2013/2.html#slide-142">- homework</a></span></h3>
 			<h3><a href="3.html">HTML Images, Links, </a>
