--- a/webspring-2014-2/index.html
+++ b/webspring-2014-2/index.html
@@ -1,92 +1,96 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>HTML Rocks!!</title>
-	
-	<link rel="stylesheet" href="src/css/style.css">
-	<link href='http://fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-	<script type="text/javascript" src="src/smoothscroll.js"></script>	
-	
-</head>
-<body>
+	<!DOCTYPE html>
+	<html>
+	<head>
+		<meta charset="utf-8">
+		<title>HTML Rocks!!</title>
 
-<header>
-	<nav>
-		<ul>
-			<li><a href="#home" class="smoothScroll"><h1>Web 304</h1></a></li>
-			<li><a href="#material" class="smoothScroll">Slides</a></li>
-			<li><a href="#resources" class="smoothScroll">Resources</a></li>
-			<li><a href="#follow" class="smoothScroll">Follow</a></li>
-			<li><a href="#help" class="smoothScroll">Help!</a></li>
-			<li id="syllabus" ><a href="images/monday-syllabus-spring2013.pdf">Download Syllabus</a></li>
-		</ul>	
-	</nav>	
-</header>	
+		<link rel="stylesheet" href="src/css/style.css">
+		<link href='http://fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+		<script type="text/javascript" src="src/smoothscroll.js"></script>	
 
-<section id="home">	
-	<h2><br/>Welcome to Web 304's Web Page</h2>
-		<h3>This is the home of MassArt's Intro to Web class for the spring semester of 2013. <br/>Here you'll find links to all class slides and extra resources.</h3>
-</section>
+	</head>
+	<body>
 
-<section id="material">	
-	<h2>Class Material</h2>
-		<h3><a href="1.html">Intro</a></h3>
-		<h3><a href="2.html">HTML Semantics</a></h3>
-		<h3><a href="3.html">HTML Images, Links, </a></h3>
-		<!--<h3><a href="4.html">Wireframing</a></h3>
-		<h3><a href="5.html">CSS Layout</a></h3>
-		<h3><a href="6.html">CSS Styles &amp; Transitions</a></h3>
-		<h3><a href="7.html">Grids &amp; Tools of the Trade</a></h3>
-		<h3><a href="8.html">Type on the Web</a></h3>
-		<h3><a href="9.html">Responsive Design</a></h3>
-		<h3><a href="10.html">jQuery - Oh Crap Programming!</a></h3>-->
-</section>	
+	<header>
+		<nav>
+			<ul>
+				<li><a href="#home" class="smoothScroll"><h1>Web 304</h1></a></li>
+				<li><a href="#material" class="smoothScroll">Slides</a></li>
+				<li><a href="#resources" class="smoothScroll">Resources</a></li>
+				<li><a href="#help" class="smoothScroll">Help!</a></li>
+				<li id="syllabus" ><a href="images/syllabus-spring2014.pdf">Download Syllabus</a></li>
+			</ul>	
+		</nav>	
+	</header>	
+
+	<section id="home">	
+		<h2><br/>Welcome to Web 304's Web Page</h2>
+			<h3>This is the home of MassArt's Intro to Web class for the spring semester of 2014. <br/>Here you'll find links to all class slides and extra resources.</h3>
+	</section>
+
+	<section id="material">	
+		<h2>Class Material</h2>
+			<h3><a href="1.html">Intro </a>
+				<span class="homework"><a href="http://zacharykaiser.github.io/webspring-2013/1.html#slide-156">- homework</a></span></h3>
+			<!--<h3><a href="2.html">HTML Semantics</a>
+				<span class="homework"><a href="http://marthar.github.io/webfall-2013/2.html#slide-142">- homework</a></span></h3>
+			<h3><a href="3.html">HTML Images, Links, </a>
+				<span class="homework"><a href="http://marthar.github.io/webfall-2013/3.html#slide-101">- homework</a></span></h3>
+			<h3><a href="4.html">CSS Basics - Styling</a>
+				<span class="homework"><a href="http://marthar.github.io/webfall-2013/4.html#slide-115">- homework</a></span></h3>
+			<h3><a href="5.html">CSS Layout</a>
+				<span class="homework"><a href="http://marthar.github.io/webfall-2013/5.html#slide-116">- homework</a></span></h3>
+			<h3><a href="6.html">UX/Info Arch></a>
+				<span class="homework"><a href="http://marthar.github.io/webfall-2013/6.html#slide-114">- homework</a></span></h3>
+			<h3><a href="7.html">Grids &amp; Tools of the Trade</a>
+				<span class="homework"><a href="http://marthar.github.io/webfall-2013/7.html#slide-180">- homework</a></span></h3>
+			<h3><a href="8.html">Type on the Web</a>
+				<span class="homework"><a href="http://marthar.github.io/webfall-2013/8.html#slide-165">- homework</a></span></h3>
+			<h3><a href="9.html">Responsive Design</a>
+				<span class="homework"><a href="http://marthar.github.io/webfall-2013/9.html#slide-101">- homework</a></span></h3>
+			<h3><a href="10.html">jQuery - Oh Crap Programming!</a>
+				<span class="homework"><a href="http://marthar.github.io/webfall-2013/10.html#slide-95">- homework</a></span></h3>
+			-->	
+	</section>	
 
 
-<section id="resources">
-	<h2>Resources from the Interwebs</h2>
-		<h3><a href="http://www.alistapart.com/">A List Apart</a></h3>	
-		<h3><a href="http://www.smashingmagazine.com/">Smashing Magazine</a></h3>
-		<h3><a href="http://css-tricks.com/">CSS Tricks</a></h3>
-		<h3><a href="http://docs.jquery.com/">jQuery Docs</a></h3>
-		<h3><a href="http://designshack.net/category/articles/css/">Design Shack</a></h3>
-		<h3><a href="http://www.webdesignerdepot.com/">Web Designer Depot</a></h3>
-		<h3><a href="http://caniuse.com/">Can I Use?</a></h3><br/><br/><br/>
+	<section id="resources">
+		<h2>Resources from the Interwebs</h2>
+			<h3><a href="http://www.alistapart.com/">A List Apart</a></h3>	
+			<h3><a href="http://www.smashingmagazine.com/">Smashing Magazine</a></h3>
+			<h3><a href="http://css-tricks.com/">CSS Tricks</a></h3>
+			<h3><a href="http://docs.jquery.com/">jQuery Docs</a></h3>
+			<h3><a href="http://designshack.net/category/articles/css/">Design Shack</a></h3>
+			<h3><a href="http://www.webdesignerdepot.com/">Web Designer Depot</a></h3>
+			<h3><a href="http://caniuse.com/">Can I Use?</a></h3>
+			<h3><a href="http://evgenymorozov.com">Evgeny Morozov's site</a>, because, well, you should be skeptical of "the Internet," too, sometimes.</h3>
+			<br/><br/><br/>
+
+		<h2>Books</h2>
+			<h3><a href="http://www.amazon.com/gp/product/1118008189/ref=as_li_ss_tl?ie=UTF8&camp=1789&creative=390957&creativeASIN=1118008189&linkCode=as2&tag=tun02-20">HTML and CSS: Design and Build Websites</a><img src="http://www.assoc-amazon.com/e/ir?t=tun02-20&l=as2&o=1&a=1118008189" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></h3>
+
+	  	  	<h3><a href="http://www.abookapart.com/products/">A Book Apart Books</a></h3>
+	  	  	<h3><a href="http://www.amazon.com/gp/product/0321616952/ref=as_li_ss_tl?ie=UTF8&camp=1789&creative=390957&creativeASIN=0321616952&linkCode=as2&tag=tun02-20">Designing with Web Standards (3rd Edition)</a><img src="http://www.assoc-amazon.com/e/ir?t=tun02-20&l=as2&o=1&a=0321616952" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+			</h3>
+  	
+	</section>
 		
-	<h2>Books</h2>
-		<h3><a href="http://www.amazon.com/gp/product/1118008189/ref=as_li_ss_tl?ie=UTF8&camp=1789&creative=390957&creativeASIN=1118008189&linkCode=as2&tag=tun02-20">HTML and CSS: Design and Build Websites</a><img src="http://www.assoc-amazon.com/e/ir?t=tun02-20&l=as2&o=1&a=1118008189" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></h3>
 
-  	  	<h3><a href="http://www.abookapart.com/products/">A Book Apart Books</a></h3>
-  	  	<h3><a href="http://www.amazon.com/gp/product/0321616952/ref=as_li_ss_tl?ie=UTF8&camp=1789&creative=390957&creativeASIN=0321616952&linkCode=as2&tag=tun02-20">Designing with Web Standards (3rd Edition)</a><img src="http://www.assoc-amazon.com/e/ir?t=tun02-20&l=as2&o=1&a=0321616952" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
-		</h3>
-  	  	
-</section>
-	
+	<section id="help">
+		<h2>Help!</h2>
+			<h3>Have a question you think your classmates might have answers to? or might want to see the answers to?<br/>
+				Post it to  <a href="https://groups.google.com/forum/#!forum/web-spring-2014">The Google Group</a></h3>
+			<h3>I'm here to help.</h3>
+			<p><a href="mailto:zrkaiser@massart.edu?Subject=Help Me Zach!">Email Zach.</a></p>
+			<h3>My office hours are Mondays from 1:00–2:00pm in 619</h3>
+	</section>
 
-<section id="follow">
-	<h2>Web Folks To Follow</h2>
-		<h3><a href="http://twitter.com/i/#!/artimated/webdesign-peeps">My WebPeeps Twitter List</a></h3>
-		<h3><a href="http://twitter.com/artimated">Me @artimated</a></h3>
-		<h3>more stuff coming</h3>
-</section>		
-
-<section id="help">
-	<h2>Help!</h2>
-		<h3>Have a question you think your classmates might have answers to? or might want to see the answers to?<br/>
-			Post it to  <a href="https://groups.google.com/forum/#!forum/webspring2013">The Google Group</a></h3>
-		<h3>Mike and I are here to help</h3>
-		<p><a href="mailto:matavilla@gmail.com?Subject=Help Me Mike!">Email Mike</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="mailto:martha@cykod.com?Subject=Help Me Martha!">Email Martha</a></p>
-		<h3>My office hours are Mondays from 12:30-2:00pm in 609</h3>
-		<p>I'm also available by appointment on Tuesdays and Wednesdays</p>
-</section>
-
-<footer>
-	<p>All Materials &copy; Martha Rettig 2012</p>
-<footer>	
-	
+	<footer>
+		<p>Props to the amazing Martha Rettig for her help with this.</p>
+	<footer>	
 
 
-</body>
-</html>
+
+	</body>
+	</html>
