updated index with copy, additional readings

--- a/webspring-2014-2/2.html
+++ b/webspring-2014-2/2.html
@@ -163,6 +163,10 @@ function shuffleHomework(amt) {
 			<h3><a href='http://www.alistapart.com/articles/understandingwebdesign/'>Understanding Web Design</a>
 			</h3>
 		</li>
+		<li>
+			<h3><a href='http://www.nytimes.com/2013/05/19/books/review/to-save-everything-click-here-by-evgeny-morozov.html?_r=0'>NYT Review of <em>To Save Everything, Click Here.</em></a>
+			</h3>
+		</li>
 	</ul>		
 </article>
 
@@ -226,13 +230,13 @@ function shuffleHomework(amt) {
 		<h3>In XHTML 4.0 Strict, document won’t render if there’s a mistake in the HTML</h3>
 	</li>
 	<li class="slide">
-		<h3>Boring...Coming down from the W3C</h3>
+		<h3>Attempt by W3C to standardize markup and display</h3>
 	</li>
 </ul>
 </article>
 
 <article class='slide slide-list'>
-<h1>HTML5 and The New Hope</h1>
+<h1>Enter HTML5</h1>
 <ul>
 	<li class="slide">
 		<h3>Previous versions of HTML came from the IETF (Now Defunct) and W3C</h3>
@@ -255,12 +259,12 @@ function shuffleHomework(amt) {
 	</h1>
 	<h3>Last numbered version of HTML<br/>
 	Browser makers driving features<br/>
-	Feature coming fast and furious</h3>
+	Features coming fast and furious</h3>
 	<h3 class="slide"><span class="callout">We’re in Browser Wars, Round #2</span></h3>
 </article>
 
 <article class='slide slide-list'>
-<h2>What's not possible with just "HTML5"?</h2>
+<h2>What's "not" possible with just "HTML5"?</h2>
 <ol>
 	<li class="slide">
 		<h3>Real-time 3D Gaming</h3>
@@ -313,7 +317,7 @@ function shuffleHomework(amt) {
 		<h3>SVG</h3>
 	</li>
 	<li class="slide">
-		<h3>New Events (touch, orientation, accel)</h3>
+		<h3>New Events (touch, orientation, accelerometer)</h3>
 	</li>
 	<li class="slide">
 		<h3>Geolocation (via GPS)</h3>
@@ -331,7 +335,7 @@ function shuffleHomework(amt) {
 
 <article class='slide slide-subhead'>
 	<h1>Let's Watch a Video</h1>
-	<h3><a href="http://www.dontfeartheinternet.com/the-basics/not-tubes">Don't Fear the Internet</a></h3>
+	<h3><a href="http://www.dontfeartheinternet.com/html/html">Don't Fear the Internet: HTML</a></h3>
 	<p>more from our favorite people Jessica Hische &amp; Russ Maschmeyer</p>
 </article>
 
@@ -484,7 +488,7 @@ function shuffleHomework(amt) {
 			<h3 >&lt;body&gt; = Site Content</h3>
 		</li>
 		<li class='slide'>
-			<h3 >&lt;header&gt; = Header (Head area of the site)</h3>
+			<h3 >&lt;header&gt; = Header (top-ish area of the site, not to be confused with the "head" tag)</h3>
 		</li>
 		<li class='slide'><h3>&lt;nav&gt; = Navigation (Menu/Navigation Area)
 	 
@@ -642,7 +646,7 @@ function shuffleHomework(amt) {
 
 <article class='slide slide-subhead'>
 <h1>You Must<br/>Validate &amp; Lint!</h1>
-<h2><a href='http://validator.w3.org/'>Validator</a> / <a href='http://lint.brihten.com/html/'>Linter</a> </h2>
+<h2><a href='http://validator.w3.org/'>Validator</a></h2>
 </article>
 
 <article class='slide slide-list'>
@@ -741,7 +745,11 @@ function shuffleHomework(amt) {
 			<li><h3><a href='https://developer.mozilla.org/en/Sections_and_Outlines_of_an_HTML5_document'>Sections and outlines of an HTML5 document</a></h3>
 			</li>
 			<li>
-                          <h3><a href='http://www.alistapart.com/articles/get-started-with-git/'>Get Started with Git</a>
+                <h3><a href='http://www.alistapart.com/articles/get-started-with-git/'>Get Started with Git</a>
+				</h3>
+			</li>
+			<li>
+                <h3><a href='http://thenewinquiry.com/essays/very-serious-populists/'>Very Serious Populists</a>
 				</h3>
 			</li>
 			</ul>
@@ -749,8 +757,9 @@ function shuffleHomework(amt) {
 	<h3 class='slide'>Coding</h3>
        <ul class='slide'>
 			<li>
-				<h3>Code Semantically (HTML) a recipe page</h3>
-				<h3>Code Semantically (HTML) the Cats vs. Dogs site</h3>				
+				<h3>Code Semantically (HTML) a recipe page. Validate it!</h3>
+				<h3>Code Semantically (HTML) the Cats vs. Dogs site. Validate it!</h3>
+				<h3>Commit and Sync your files, then add the links to those to your homework/index.html file.<h3>				
 			</li>
 		</ul>
 </ul>	
