uploaded day 1 again

--- a/webspring-2014-2/1.html
+++ b/webspring-2014-2/1.html
@@ -62,9 +62,9 @@
 <!-- Create any number of elements with class slide within the container -->
 <article class='slide slide-subhead'>
 <h1>Web 1</h1>
-<h2>CDGD304 - Fall 2013</h2>
+<h2>Spring 2014</h2>
 <p>Mondays 2:00pm - 6:00pm<br/>
- <a href='http://bit.ly/web304'>http://bit.ly/web304</a></p>
+ <a href='http://zacharykaiser.github.io/webspring-2013'>zacharykaiser.github.io/webspring-2013</a></p>
 </article>
 	
 <article class='slide slide-list'>
@@ -95,42 +95,15 @@
 </article>
 
 <article class='slide slide-title'>
-<h1>Who am I?</h1>
+<h1>Hi.</h1>
 </article>
 
 
 <article class='slide slide-subhead'>
-<h1>Me = Martha Rettig</h1>
-<h3>Run Boston-based Web Consultancy <a href='http://cykod.com'>Cykod</a></h3>
+<h1>I'm Zach</h1>
+
 </article>
 
-<article class='slide slide-list'>
-<h2>Martha Rettig /<span class="callout"> Designer</span></h2>
-<ul>
-	<li class="slide">
-		<h3>B.A. in Graphic Design</h3>
-	</li>
-	<li class="slide">
-		<h3>11 years of agency experience in print &amp; branding</h3>
-	</li>
-	<li class="slide">
-		<h3>5 years as creative director, web &amp; UX design at cykod</h3>
-	</li>
-	<li class="slide">
-		<h3>working towards my MFA here at MassArt in DMI</h3>
-	</li>
-	<li class="slide">
-		<h3>Run the <a href="http://www.meetup.com/Boston-Artists-Plus-Coders/">Artists + Coders Meetup</a></h3>
-	</li>
-	<li class="slide"><h3>Check out the <a href="http://www.meetup.com/Boston-Frontend-Developers/">Front-end Developers Meetup</a></h3>
-	</li>
-</ul>
-</article>
-
-<article class='slide slide-subhead'>
-<h1>I <span class='large'>&hearts;</span> the web</h1>
-<h3>I want you to be as excited about the current state of the web as I am.</h3>
-</article>
 
 <article class='slide slide-accent'>
 <h1>Course Goals</h1>
@@ -142,7 +115,7 @@
 
 
 <article  style='background-image:url(images/colored-bricks.jpg);' class='slide slide-background-content'>
-<div class="background-padding"><div class="background-wrapper"><h1>Get you comfortable with the basics</h1>
+<div class="background-padding"><div class="background-wrapper"><h1>Get comfortable with the basics</h1>
 <h3 class='slide'>You've got to get your HTML, CSS, &amp; Javascript down pat. They aren't going anywhere.</h3>
 </div></div>
 </article>
@@ -161,16 +134,16 @@
 </article>
 
 <article  style='background-image:url(images/voodoo.jpg);' class='slide slide-background-content'>
-<div class="background-padding"><div class="background-wrapper"><h1>No voodoo</h1>
-<h3 class='slide'>There is no magic. <br/>I repeat: there is no Magic.</h3>
+<div class="background-padding"><div class="background-wrapper"><h1>Say things about websites. Smartly.</h1>
+<h3 class='slide'>If you make websites, <br/>you should understand what that means.</h3>
 </article>
 
 <article style='background-image:url(images/html5-dude.jpg);' class='slide slide-background'>
-<h1>Most Important Goal</h1>
+<h1>Goal 4</h1>
 </article>
 
 <article  style='background-image:url(images/html5-dude.jpg);' class='slide slide-background-content'>
-<div class="background-padding"><div class="background-wrapper"><h1>Get you building stuff</h1>
+<div class="background-padding"><div class="background-wrapper"><h1>Make stuff.</h1>
 <h3 class='slide'>To be able to turn ideas and designs into functioning web pages.</h3>
 </article>
 
@@ -178,16 +151,16 @@
 <h2>How we're going to accomplish this</h2>
 <ul>
 	<li class="slide">
-		<h3>Lots of Hands-on exercises.</h3>
+		<h3>Hands-on exercises.</h3>
 	</li>
 	<li class="slide">
-		<h3>Lots of Critical evaluation of websites.</h3>
+		<h3>Evaluation of current websites.</h3>
 	</li>
 	<li class="slide">
-		<h3>Just enough lecture and theory to get by.</h3>
+		<h3>Theory and reading.</h3>
 	</li>
 	<li class="slide">
-		<h3>Not a one-size-fits-all approach.</h3>
+		<h3>Improvisation (not a one-size-fits-all approach).</h3>
 	</li>
 </ul>
 </article>
@@ -198,7 +171,7 @@
 </article>
 
 <article class='slide slide-subhead'>
-<h1><a href="images/monday-syllabus-spring2013.pdf">Syllabus</a></h1>
+<h1><a href="images/syllabus-fall2013.pdf">Syllabus</a></h1>
 <p>Weekly Reading, Assignments, &amp; Critiques, </p>
 </article>
 
@@ -210,7 +183,7 @@
 
 <article class='slide slide-subhead'>
 <h1>Mailing List</h1>
-<p>You should be a member of our Google group<br/><a href='https://groups.google.com/a/massart.edu/d/forum/13SP-CDGD-304-01'>https://groups.google.com/a/massart.edu/d/forum/13SP-CDGD-304-01</a></p>
+<p><a href='https://groups.google.com/forum/#!forum/web-spring-2014'>Join the Google Group</a></p>
 </article>
 
 <article class='slide slide-title'>
@@ -262,7 +235,7 @@ between them via hyperlinks.
 		<h3>Interactive Information Applications: <a href='http://maps.google.com'>maps.google.com</a></h3>
 	</li>
 	<li class='slide'>
-		<h3>Interactive Games: <a href='http://www.farmville.com'>farmville.com</a></h3>
+		<h3>Interactive Games: <a href='http://www.king.com/games/puzzle-games/candy-crush/?language=en_US&action=play'>CandyCrush</a></h3>
 	</li>
 </ul>
 </article>
@@ -321,6 +294,9 @@ between them via hyperlinks.
 	<li class="slide">
 		<h3>Search engines</h3>
 	</li>
+	<li class="slide">
+		<h3>Why you're making a site in the first place</h3>
+	</li>
 </ol>
 </article>
 
@@ -330,8 +306,8 @@ between them via hyperlinks.
 </article>
 
 <article class="slide slide-subhead">
-<h1>Nobody</h1>
-<p>(The lunatics are running the asylum)</p>
+<h1>Nobody/a lot of people/big corporations</h1>
+<p>Depends on who you talk to</p>
 </article>
 
 <article class="slide slide-list">
@@ -348,6 +324,7 @@ between them via hyperlinks.
 	</li>
 	<li class='slide'>
 		<h3>Servers serve pages (Apache, IIS, Nginx)</h3>
+		<p>Companies own servers (Amazon Web Services, GoDaddy, etc.)</p>
 	</li>
 	<li class='slide'>
 		<h3>Scripting languages talk to servers (PHP, C#, Python)</h3>
@@ -388,7 +365,7 @@ between them via hyperlinks.
 <ol>
 	<li class='slide'>
 		<h3>CC BY, CC BY-SA, CC BY-ND, CC BY-NC, CC BY-NC-SA, CC BY-NC-ND</h3>
-		<h3>Attribution, Share-Alike, No-Derivitives, Non Commercial</h3>
+		<h3>Attribution, Share-Alike, No-Derivatives, Non Commercial</h3>
 		<h3>(<a href='http://creativecommons.org/licenses/'>http://creativecommons.org/licenses/</a>)</h3>
 	</li>
 	<li class='slide'>
@@ -532,16 +509,16 @@ between them via hyperlinks.
 	<h4 class='slide'>Go Fork Yourself</h4>
 			<ul>
 				<li class='slide'>
-				<h3>go to <a href='https://github.com/marthar/fall2012'>https://github.com/marthar/spring2013</a></h3>
+				<h3>go to <a href='https://github.com/marthar/fall2013'>https://github.com/zacharykaiser/spring2014</a></h3>
 				</li>
 				<li class='slide'>
 				<h3>click the fork button</h3>
 				</li>
 				<li class='slide'>
-					<h3>Click Admin and change the repository name to [yourusername].github.com</h3>
+					<h3>Click "settings" and change the repository name to [yourusername].github.io</h3>
 				</li>
 				<li class='slide'>
-					<h3>(Click back to Admin) Next click on "Collaborators," type in "marthar" and click add</h3>
+					<h3>(Click back to Admin) Next click on "Collaborators," type in "zacharykaiser" and click add</h3>
 				</li>
 				<li class='slide'>
 				<h3>open or download GitHub for Mac <br/>
@@ -560,13 +537,13 @@ between them via hyperlinks.
 			<h3>Put in your login info</h3>
 		</li>
 		<li class='slide'>
-			<h3>Find your "username.github.com" repository</h3>
+			<h3>Find your "username.github.io" repository</h3>
 				<ul>
 					<li class='slide'>
 					<h3>click on "clone"</h3>
 					</li>
 					<li class='slide'>
-					<h3>clone it to your key or folder you can access later</h3>
+					<h3>clone it to a folder you can access later</h3>
 					</li>
 					<li class='slide'>
 						<h3>Double click on it</h3>
@@ -590,8 +567,8 @@ between them via hyperlinks.
 
 
 <article class='slide slide-subhead'>
-	<h1>Your Done!</h1>
-	<p>Go to <a href="marthar.github.com/01-class-intro">[username].github.com/meeee</a></p>
+	<h1>You&rsquo;re Done!</h1>
+	<p>Go to [username].github.io/meeee</p>
 	<p>wasn't that easy? <br/>(don't worry we'll do it all over again next week)</p>
 </article>	
 
@@ -617,7 +594,7 @@ between them via hyperlinks.
     <h3><a href='http://lostworldsfairs.com/'>Lost World's Fairs</a></h3>
 	</li>
 	<li class="slide">
-    <h3><a href='http://www.nikebetterworld.com/'>Nike Better World</a></h3>
+    <h3><a href='http://www.apple.com/mac-pro/'>Mac Pro</a></h3>
 	</li>
 	<li class="slide">
     <h3><a href='http://www.20thingsilearned.com/en-US/home'>20 Things I Learned About Browsers and the Web</a></h3>
@@ -629,10 +606,7 @@ between them via hyperlinks.
     <h3><a href='http://acko.net/blog/making-love-to-webkit/'>Ackno.net</a></h3>
 	</li>
 	<li class="slide">
-    <h3><a href='http://www.thisshell.com/'>This Shell</a></h3>
-	</li>
-	<li class="slide">
-    <h3><a href='http://www.chromeweblab.com/'>Chrome Web Lab</a></h3>
+    <h3><a href='http://adayinbigdata.com/'>A Day in Big Data</a></h3>
 	</li>
 	<li class="slide">
     <h3><a href='http://ro.me'>Ro.me</a></h3>
@@ -641,7 +615,7 @@ between them via hyperlinks.
     <h3><a href='http://www.thewildernessdowntown.com/'>The Wilderness Downtown</a></h3>
 	</li>
 	<li class="slide">
-    <h3><a href='http://benthebodyguard.com/index2.php'>Ben the Bodyguard</a></h3>
+    <h3><a href='http://www.squarespace.com/stories'>Square Space</a></h3>
 	</li>
 	<li class="slide">
     <h3><a href='http://webglsamples.googlecode.com/hg/spacerocks/spacerocks.html'>SpaceRocks</a></h3>
@@ -652,6 +626,9 @@ between them via hyperlinks.
 	<li class="slide">
     <h3><a href='http://currantcat.com/convergence/'>Convergence</a></h3>
 	</li>
+	<li class="slide">
+		<h3><a href='http://www.barackobama.com/health-care-stories/'>Barack Obama Health Care Stories</a></h3>
+	</li>	
 </ol>
 
 
@@ -670,6 +647,9 @@ between them via hyperlinks.
 				</h3>
 			</li>
 			<li>
+				<h3><a href='http://www.nytimes.com/2013/05/19/books/review/to-save-everything-click-here-by-evgeny-morozov.html?_r=0'>Big Data is Watching You, a review of To Save Everything, Click Here, by Evgeny Morozov.</a></h3>
+			</li>
+			<li>
 				<h3><a href='http://www.amazon.com/HTML-CSS-Design-Build-Websites/dp/1118008189/ref=sr_1_1?ie=UTF8&qid=1359387442&sr=8-1&keywords=html+%26+css'>Buy this Book</a>
 				</h3>
 			</li>		
@@ -681,7 +661,10 @@ between them via hyperlinks.
 				<h3>Finish entering your name, class and info</h3>
 			</li>
 			<li>
-				<h3>Add the link to your completed homework to your homework file- then Push to Github</h3>
+				<h3>Add the link to your completed homework to your homework file - then Push to Github</h3>
+			</li>
+			<li>
+				<h3>Email me a link to your Github homework sheet (yourusername.github.io/homework)</h3>
 			</li>
 		</ul>
 </ul>	
@@ -691,13 +674,13 @@ between them via hyperlinks.
 	<h1>Questions and/or Problems?</h1>
 	<ul>
 		<li>
-		<h3>if it's a general question that the rest of the class might benefit from seeing post a message to me at <a href="http://groups.google.com/group/web304-spring2012"> google groups</a></h3>
+		<h3>if it's a general question that the rest of the class might benefit from seeing post a message to me at <a href="https://groups.google.com/d/forum/web-spring-2014"> google groups</a></h3>
 		</li>		
 		<li>	
-		<h3>email me : <a href="mailto:martha@cykod.com">martha@cykod.com</a></h3>
+		<h3>email me : <a href="mailto:zrkaiser@massart.edu">zrkaiser@massart.edu</a></h3>
 		</li>
 		<li>
-		<h3>I have office hours here at MassArt in T609 on Mondays from 1:00-2:00</h3>
+		<h3>I have office hours here at MassArt in T619 on Mondays from 1:00-2:00</h3>
 		</li>
 	</ul>
 </article>		
