--- a/webspring-2014-2/index.html
+++ b/webspring-2014-2/index.html
@@ -32,10 +32,10 @@
 	<section id="material">	
 		<h2>Class Material</h2>
 			<h3><a href="1.html">Intro </a>
-				<span class="homework"><a href="http://zacharykaiser.github.io/webspring-2013/1.html#slide-156">- homework</a></span></h3>
-			<!--<h3><a href="2.html">HTML Semantics</a>
-				<span class="homework"><a href="http://marthar.github.io/webfall-2013/2.html#slide-142">- homework</a></span></h3>
-			<h3><a href="3.html">HTML Images, Links, </a>
+				<span class="homework"><a href="http://zacharykaiser.github.io/webspring-2014-2/1.html#slide-148">- homework</a></span></h3>
+			<h3><a href="2.html">HTML Semantics</a>
+				<span class="homework"><a href="http://zacharykaiser.github.io/webfall-2013/2.html#slide-142">- homework</a></span></h3>
+			<!--<h3><a href="3.html">HTML Images, Links, </a>
 				<span class="homework"><a href="http://marthar.github.io/webfall-2013/3.html#slide-101">- homework</a></span></h3>
 			<h3><a href="4.html">CSS Basics - Styling</a>
 				<span class="homework"><a href="http://marthar.github.io/webfall-2013/4.html#slide-115">- homework</a></span></h3>
