updated verbiage in slides

--- a/webspring-2014-2/1.html
+++ b/webspring-2014-2/1.html
@@ -64,7 +64,7 @@
 <h1>Web 1</h1>
 <h2>Spring 2014</h2>
 <p>Mondays 2:00pm - 6:00pm<br/>
- <a href='http://zacharykaiser.github.io/webspring-2013'>zacharykaiser.github.io/webspring-2013</a></p>
+ <a href='http://zacharykaiser.github.io/webspring-2014-2'>zacharykaiser.github.io/webspring-2014-2</a></p>
 </article>
 	
 <article class='slide slide-list'>
