--- a/webspring-2014-2/2.html
+++ b/webspring-2014-2/2.html
@@ -63,8 +63,8 @@
 <article class='slide slide-subhead'>
 <h1>HTML</h1>
 <h2>Week 2</h2>
-<p>CDGD304 - Spring 2013<br/>
- <a href='http://marthar.github.com/webspring-2013/2.html'>http://marthar.github.com/webspring-2013/2.html</a></p>
+<p>CDGD304 - Spring 2014<br/>
+ <a href='http://zacharykaiser.github.io/webspring-2014-2/2.html'>http://zacharykaiser.github.io/webspring-2014-2/2.html</a></p>
 </article>
 	
 <article class='slide slide-list'>
