updated student homework links

--- a/webspring-2014-2/2.html
+++ b/webspring-2014-2/2.html
@@ -133,21 +133,22 @@ function shuffleHomework(amt) {
 	</script>
 	<a href='javascript:shuffleHomework(10);'>Shuffle</a>
 	<ul id='homework'>
-		<li><a href='http://carljbowman.github.com/homework/index.html'>Carl Bowman</a></li>
-		<li><a href='http://jlfarnham.github.com/homework/index.html'>Jules Farnham</a></li>
-		<li><a href='http://brendongouveia.github.com/homework/index.html'>Brendon Gouveia</a></li>
-		<li><a href='http://zkgray.github.com/homework/index.html'>Zoya Gray</a></li>
-		<li><a href='http://carsonhalstead.github.com/homework/index.html'>Carson Halstead</a></li>
-		<li><a href='http://leehouse.github.com/homework/index.html'>Lee House</a></li>
-		<li><a href='http://jhoustova.github.com/homework/index.html'>Jarmila Houstova</a></li>
-		<li><a href='http://mclauer.github.com/homework/index.html'>Maria Lauer</a></li>
-		<li><a href='http://caseymcgee.github.com/homework/index.html'>Casey McGee</a></li>
-		<li><a href='http://katherinemclean.github.com/homework/index.html'>Katherine McLean</a></li>
-		<li><a href='http://jrraichek.github.com/homework/index.html'>Jennifer Raichek</a></li>
-		<li><a href='http://chrisskinner.github.com/homework/index.html'>Christopher Skinner</a></li>
-		<li><a href='http://jenellevalencia.github.com/homework/index.html'>Jenelle Valencia</a></li>
-		<li><a href='http://youngshimgontijo.github.com/homework/index.html'>Youngshim Gontijo</a></li>
-		<li><a href='http://jaelee.github.com/homework/index.html'>Sukjae Lee</a></li>
+		<li><a href='http://eabaahomc.github.io/homework/index.html'>Ewuradjoa Abaaho</a></li>
+		<li><a href='http://BethAlmeida.github.io/homework/index.html'>Beth Almeida</a></li>
+		<li><a href='http://zabarzin.github.io/homework/index.html'>Zahra Barzin</a></li>
+		<li><a href='http://cjbowers.github.io/homework/index.html'>Chris Bowers</a></li>
+		<li><a href='http://nikicor.github.io/homework/index.html'>Nikkie Corzo</a></li>
+		<li><a href='http://evaneagan.github.io/homework/index.html'>Evan Eagan</a></li>
+		<li><a href='http://mpedgar.github.io/homework/index.html'>Maggie Edgar</a></li>
+		<li><a href='http://skyerickson.github.io/homework/index.html'>Sky Erickson</a></li>
+		<li><a href='http://elharris.github.io/homework/index.html'>Liz Harris</a></li>
+		<li><a href='http://laramee321.github.io/homework/index.html'>Eoin Laramee</a></li>
+		<li><a href='http://mliriano.github.io/homework/index.html'>Michelle Liriano</a></li>
+		<li><a href='http://camuscanell.github.io/homework/index.html'>Craig Muscanell</a></li>
+		<li><a href='http://sapeckham.github.io/homework/index.html'>Sam Peckham</a></li>
+		<li><a href='http://jesspurdy.github.io/homework/index.html'>Jesseca Purdy</a></li>
+		<li><a href='http://nataliesocha.github.io/homework/index.html'>Natalie Socha</a></li>
+		<li><a href='http://maw11999.github.io/homework/index.html'>Morgan Wilson</a></li>
 
 	</ul>
 </article>
