updated homework links in 3

--- a/webspring-2014-2/3.html
+++ b/webspring-2014-2/3.html
@@ -87,8 +87,7 @@
 <article class='slide slide-subhead'>
 <h1>HTML</h1>
 <h2>Week 3</h2>
-<p>CDGD304 - Spring 2013<br/>
- <a href='http://marthar.github.com/webspring-2013/3.html'>http://marthar.github.com/webspring-2013/3.html</a></p>
+<p>CDGD304 - Spring 2014</p>
 </article>
 	
 <article class='slide slide-list'>
@@ -119,9 +118,9 @@
 </article>
 
 <article class='slide slide-subhead'>
-<h1>Mailing List- Let's try this again!</h1>
-<p>You should be a member of our Google group<br/>
-	<a href="https://groups.google.com/forum/#!forum/webspring2013">The Google Group</a></p>
+<h1>Mailing List</h1>
+<p>Just make sure you've signed up.<br/>
+	<a href="https://groups.google.com/forum/#!forum/web-spring-2014">The Google Group</a></p>
 </article>
 
 <article class='slide slide-accent'>
@@ -165,22 +164,22 @@ function shuffleHomework(amt) {
 	</script>
 	<a href='javascript:shuffleHomework(10);'>Shuffle</a>
 	<ul id='homework'>
-		<li><a href='http://carljbowman.github.com/homework/index.html'>Carl Bowman</a></li>
-		<li><a href='http://jlfarnham.github.com/homework/index.html'>Jules Farnham</a></li>
-		<li><a href='http://brendongouveia.github.com/homework/index.html'>Brendon Gouveia</a></li>
-		<li><a href='http://zkgray.github.com/homework/index.html'>Zoya Gray</a></li>
-		<li><a href='http://carsonhalstead.github.com/homework/index.html'>Carson Halstead</a></li>
-		<li><a href='http://leehouse.github.com/homework/index.html'>Lee House</a></li>
-		<li><a href='http://jhoustova.github.com/homework/index.html'>Jarmila Houstova</a></li>
-		<li><a href='http://mclauer.github.com/homework/index.html'>Maria Lauer</a></li>
-		<li><a href='http://caseymcgee.github.com/homework/index.html'>Casey McGee</a></li>
-		<li><a href='http://katherinemclean.github.com/homework/index.html'>Katherine McLean</a></li>
-		<li><a href='http://jrraichek.github.com/homework/index.html'>Jennifer Raichek</a></li>
-		<li><a href='http://chrisskinner.github.com/homework/index.html'>Christopher Skinner</a></li>
-		<li><a href='http://jenellevalencia.github.com/homework/index.html'>Jenelle Valencia</a></li>
-		<li><a href='http://youngshimgontijo.github.com/homework/index.html'>Youngshim Gontijo</a></li>
-		<li><a href='http://jaelee.github.com/homework/index.html'>Sukjae Lee</a></li>
-
+		<li><a href='http://eabaahomc.github.io/homework/index.html'>Ewuradjoa Abaaho</a></li>
+		<li><a href='http://BethAlmeida.github.io/homework/index.html'>Beth Almeida</a></li>
+		<li><a href='http://zabarzin.github.io/homework/index.html'>Zahra Barzin</a></li>
+		<li><a href='http://cjbowers.github.io/homework/index.html'>Chris Bowers</a></li>
+		<li><a href='http://nikicor.github.io/homework/index.html'>Nikkie Corzo</a></li>
+		<li><a href='http://evaneagan.github.io/homework/index.html'>Evan Eagan</a></li>
+		<li><a href='http://mpedgar.github.io/homework/index.html'>Maggie Edgar</a></li>
+		<li><a href='http://skyerickson.github.io/homework/index.html'>Sky Erickson</a></li>
+		<li><a href='http://elharris.github.io/homework/index.html'>Liz Harris</a></li>
+		<li><a href='http://laramee321.github.io/homework/index.html'>Eoin Laramee</a></li>
+		<li><a href='http://mliriano.github.io/homework/index.html'>Michelle Liriano</a></li>
+		<li><a href='http://camuscanell.github.io/homework/index.html'>Craig Muscanell</a></li>
+		<li><a href='http://sapeckham.github.io/homework/index.html'>Sam Peckham</a></li>
+		<li><a href='http://jesspurdy.github.io/homework/index.html'>Jesseca Purdy</a></li>
+		<li><a href='http://nataliesocha.github.io/homework/index.html'>Natalie Socha</a></li>
+		<li><a href='http://maw11999.github.io/homework/index.html'>Morgan Wilson</a></li>
 	</ul>
 </article>
 
@@ -196,6 +195,10 @@ function shuffleHomework(amt) {
 			<h3><a href='http://www.alistapart.com/articles/get-started-with-git/'>Get Started with Git</a>
 			</h3>
 		</li>
+		<li>
+			<h3><a href='http://thenewinquiry.com/essays/very-serious-populists/'>Very Serious Populists</a>
+			</h3>
+		</li>
 	</ul>		
 </article>
 
@@ -204,13 +207,9 @@ function shuffleHomework(amt) {
 </article>
 
 
-<article class='slide slide-accent'>
-
-</article>	
-
 <article class='slide slide-subhead'>
 	<h1>...but first a little review</h1>
-	<h3>Let's let Jessica & Russ get us started!</h3>
+	<h3>Let's let Jessica and Russ get us started!</h3>
 	<h3><a href="http://www.dontfeartheinternet.com/html/don%E2%80%99t-fear-starting-from-scratch">Don't Fear the Internet</a></h3>
 </article>
 
@@ -324,8 +323,8 @@ function shuffleHomework(amt) {
 </article>
 
 <article class='slide slide-list'>
-<h1>Links are why the Web is so awesome!</h1>
-	<h3>they are what makes surfing possible (no wetsuit required) </h3>
+<h1>Links are why the Web is so awesome! No seriously. That's why.</h1>
+	<h3>You know, Sir Tim and hypertext and all that stuff. Remember? </h3>
 	<ol>
 		<li>link from one website to another </li> 
 		<li>link from one page in your site to another</li>
