added some stuff about homework screwup

--- a/webspring-2014-2/3.html
+++ b/webspring-2014-2/3.html
@@ -127,6 +127,20 @@
 <h1>Homework</h1>
 </article>
 
+<article class='slide slide-accent'>
+	<h1>Oh sh*t. CSS Reset broke your homework. Sorry about that.</h1>
+</article>
+
+<article class='slide slide-subhead'>
+<h1>What is a CSS reset, you ask?</h1>
+<p>We will begin talking about such things later today. For now, all you need to know is that I accidentally included that in the template for your homework.</p>
+</article>
+
+<article class='slide slide-subhead'>
+	<h1>For now...</h1>
+	<p>Delete the link to the stylesheet at the top of the page in your HTML file and it should work fine. This is a subconscious reminder that HTML is NOT style. Right?...</p>
+</article>
+
 <article class="slide slide-list">
 	<h2>Homework Review</h2>
 	<script>
@@ -524,6 +538,10 @@ function shuffleHomework(amt) {
 </article>	
 
 <article class='slide slide-accent'>
+	<h1>...</h1>
+</article>	
+
+<article class='slide slide-accent'>
 	<h1>Let's Talk CSS</h1>
 </article>
 
@@ -684,26 +702,18 @@ function shuffleHomework(amt) {
             <h3><a href='http://coding.smashingmagazine.com/2009/10/05/mastering-css-coding-getting-started/'>Mastering CSS Coding: Getting Started</a>
 			</h3>
 		</li>
-		<li>
-            <h3><a href='http://coding.smashingmagazine.com/2008/05/02/improving-code-readability-with-css-styleguides/'>Improving Code Readability With CSS Styleguides</a>
-			</h3>
-		</li>
-		<li>
-            <h3><a href='http://www.alistapart.com/articles/css3-bling-in-the-real-world/'>CSS3 Bling in the Real World</a>
-			</h3>
-		</li>
 	</ul>
 	
 	<h3 class='slide'>Coding</h3>
        <ul class='slide'>
 			<li>
-				<h3>Add an image of you to your Meee page as well as a link to your preferred email address - make sure your code validates!</h3>
+				<h3>Add an image of you to your Meeee page as well as a link to your preferred email address - make sure your code validates!</h3>
 			</li>
 			<li>
-				<h3>Go Back and fix the images in your cats vs dogs site - make sure your code validates!</h3>
+				<h3>Go Back and fix the images in your cats vs dogs site if you haven't already - make sure your code validates!</h3>
 			</li>
 			<li>
-				<h3>Add a Second Page to your Recipe site and link to it - make sure your code validates!</h3>
+				<h3>Add a Second Page to your Recipe site and link to it (e.g., information about a particular ingredient or a related recipe) - make sure your code validates!</h3>
 			</li>
 		</ul>
 </ul>	
