updated today's slides

--- a/webspring-2014-2/3.html
+++ b/webspring-2014-2/3.html
@@ -373,15 +373,14 @@ function shuffleHomework(amt) {
 <article class='slide slide-list'>
 	<h2>Open a Link in a New Window</h2>
 	<h3>we add an attribute inside the a tag of <em>target="_blank"</em></h3><br/>
-		<h3>Generally we don't want to open links in new windows (let the user decide if they want to do this)</h3><br/>
-	<h3>&lt;a &nbsp; href = "about.com"&nbsp; target = "about.com"&gt;<em>About Page</em>&lt;a&gt;</h3>
+		<h3>Generally we don't want to open links in new windows (let the user decide if they want to do this)</h3>
 </article>
 
 <article class='slide slide-list'>
 	<h2>Link to a page in your site</h2>
 	<h3>We need to tell the browser what .html document to link to/open</h3><br/>
 		<h3>If all the pages (.html files) are in the same folder you can just use the name of the file</h3><br/>
-	<h3>&lt;a &nbsp; href&nbsp; = "about.com"&gt;<em>About Page</em>&lt;a&gt;</h3>
+	<h3>&lt;a &nbsp; href&nbsp; = "about.html"&gt;<em>About Page</em>&lt;a&gt;</h3>
 </article>
 
 <article class='slide slide-list'>
@@ -412,8 +411,8 @@ function shuffleHomework(amt) {
 		<li>decide where on the page you want to link</li>
 		<li>add the <em>id=".."</em> attribute inside the opening tag</li> 		
 		<li>the attribute name should start with a letter or _ and be relevant to the text</li>
-		<li>can't reuse attribute names (ids only get used) </li>
-		<li>in the nav link to the anchor text using <em>href="#id-name"</em></li>
+		<li>can't reuse attribute names (ids only get used, and just once) </li>
+		<li>in the nav link to the anchor text using <em>href="#id-name" (e.g., href="#lunch")</em></li>
 	</ol>
 </article>
 
@@ -542,7 +541,7 @@ function shuffleHomework(amt) {
 </article>	
 
 <article class='slide slide-accent'>
-	<h1>Let's Talk CSS</h1>
+	<h1>Let's Talk CSS. Briefly.</h1>
 </article>
 
 <article class="slide slide-list">
@@ -555,10 +554,10 @@ function shuffleHomework(amt) {
 	<h3>Controls the styles of your page</h3>
 </li>
 <li class="slide">
-	<h3>Also Controls the layout of your page (where stuff is positioned)</h3>
+	<h3>Also controls the layout of your page (where stuff is positioned)</h3>
 </li>
 <li class="slide">
-	<h3>Can have different styles different media formats (eg. print, screen, mobile)</h3>
+	<h3>Can have different styles different media formats (e.g., print, screen, mobile)</h3>
 </li>
 </ul>
 </article>
