Added student homework and updated some text in 4

--- a/webspring-2014-2/4.html
+++ b/webspring-2014-2/4.html
@@ -85,10 +85,9 @@
 
 <!-- Create any number of elements with class slide within the container -->
 <article class='slide slide-subhead'>
-<h1>More CSS <font color="red">&hearts;</font></h1>
+<h1>CSS: Let's do this.</h1>
 <h2>Week 4</h2>
-<p>CDGD304 - Spring 2013<br/>
- <a href='http://marthar.github.com/webspring-2013/4.html'>http://marthar.github.com/webspring-2013/4.html</a></p>
+<p>CDGD304 - Spring 2014<br/></p>
 </article>
 	
 <article class='slide slide-list'>
@@ -163,20 +162,22 @@ function shuffleHomework(amt) {
 	</script>
 	<a href='javascript:shuffleHomework(10);'>Shuffle</a>
 	<ul id='homework'>
-		<li><a href='http://carljbowman.github.com/homework/index.html'>Carl Bowman</a></li>
-		<li><a href='http://jlfarnham.github.com/homework/index.html'>Jules Farnham</a></li>
-		<li><a href='http://brendongouveia.github.com/homework/index.html'>Brendon Gouveia</a></li>
-		<li><a href='http://zkgray.github.com/homework/index.html'>Zoya Gray</a></li>
-		<li><a href='http://carsonhalstead.github.com/homework/index.html'>Carson Halstead</a></li>
-		<li><a href='http://leehouse.github.com/homework/index.html'>Lee House</a></li>
-		<li><a href='http://jhoustova.github.com/homework/index.html'>Jarmila Houstova</a></li>
-		<li><a href='http://mclauer.github.com/homework/index.html'>Maria Lauer</a></li>
-		<li><a href='http://caseymcgee.github.com/homework/index.html'>Casey McGee</a></li>
-		<li><a href='http://katherinemclean.github.com/homework/index.html'>Katherine McLean</a></li>
-		<li><a href='http://jrraichek.github.com/homework/index.html'>Jennifer Raichek</a></li>
-		<li><a href='http://chrisskinner.github.com/homework/index.html'>Christopher Skinner</a></li>
-		<li><a href='http://jenellevalencia.github.com/homework/index.html'>Jenelle Valencia</a></li>
-		<li><a href='http://youngshimgontijo.github.com/homework/index.html'>Youngshim Gontijo</a></li>
+		<li><a href='http://eabaahomc.github.io/homework/index.html'>Ewuradjoa Abaaho</a></li>
+		<li><a href='http://BethAlmeida.github.io/homework/index.html'>Beth Almeida</a></li>
+		<li><a href='http://zabarzin.github.io/homework/index.html'>Zahra Barzin</a></li>
+		<li><a href='http://cjbowers.github.io/homework/index.html'>Chris Bowers</a></li>
+		<li><a href='http://nikicor.github.io/homework/index.html'>Nikkie Corzo</a></li>
+		<li><a href='http://evaneagan.github.io/homework/index.html'>Evan Eagan</a></li>
+		<li><a href='http://mpedgar.github.io/homework/index.html'>Maggie Edgar</a></li>
+		<li><a href='http://skyerickson.github.io/homework/index.html'>Sky Erickson</a></li>
+		<li><a href='http://elharris.github.io/homework/index.html'>Liz Harris</a></li>
+		<li><a href='http://laramee321.github.io/homework/index.html'>Eoin Laramee</a></li>
+		<li><a href='http://mliriano.github.io/homework/index.html'>Michelle Liriano</a></li>
+		<li><a href='http://camuscanell.github.io/homework/index.html'>Craig Muscanell</a></li>
+		<li><a href='http://sapeckham.github.io/homework/index.html'>Sam Peckham</a></li>
+		<li><a href='http://jesspurdy.github.io/homework/index.html'>Jesseca Purdy</a></li>
+		<li><a href='http://nataliesocha.github.io/homework/index.html'>Natalie Socha</a></li>
+		<li><a href='http://maw11999.github.io/homework/index.html'>Morgan Wilson</a></li>
 
 	</ul>
 </article>
@@ -199,7 +200,10 @@ function shuffleHomework(amt) {
 	<h3>Also Controls the layout of your page (where stuff is positioned)</h3>
 </li>
 <li class="slide">
-	<h3>Can have different styles for different media formats (eg. print, screen, mobile)</h3>
+	<h3>Can have different styles for different media formats (e.g., print, screen, mobile)</h3>
+</li>
+<li class="slide">
+	<h3>Composed of a selector and a declaration.</h3>
 </li>
 </ul>
 </article>
@@ -232,13 +236,13 @@ function shuffleHomework(amt) {
 	<h3>You can't use spaces.</h3>
 </li>
 <li class="slide">
-	<h3>You shouldn't use underscores (_) - altough technically now permitted</h3>
+	<h3>You shouldn't use underscores (_)</h3>
 </li>
 <li class="slide">
 	<h3>Use camelCase or dashes-to-separate-names</h3>
 </li>
 <li class="slide">
-	<h3>I'd recommend dashes - css uses Dashses (<em>background-color, font-family</em>), <br/>
+	<h3>I'd recommend dashes - CSS uses Dashes (<em>background-color, font-family</em>), <br/>
 		Javascript uses camelCase</h3>
 </li>
 <li class="slide">
@@ -261,7 +265,7 @@ function shuffleHomework(amt) {
 	<h3>Style generally inherit, Layout don’t</h3>
 </li>
 <li class="slide">
-	<h3>Sometimes can be combined into one: e.g.<br/>
+	<h3>Sometimes can be combined into one: e.g.,<br/>
 	<em>font = font-family, font-style, font-variant, ...</em><br/>
 	<em>background = background-color, background-image, background-repeat, background-attachment, background-position ...</em><br/>
 	<em>padding = padding-top, padding-right, padding-bottom, padding-left ...</em></h3>
@@ -281,11 +285,11 @@ function shuffleHomework(amt) {
 </li>
 <li class="slide">
 	<h3>numbers: 0, 25px, 1.1em, 100%<br/>
-		<em>em's are 'M' height - and these inherit (multiply)</em>
+		<em>em's are 'M' height - and these inherit (so remember what the font size of the parent element is...)</em>
 	</h3>
 </li>
 <li class="slide">
-	<h3>“inherit” is a special property to force inheritence</h3>
+	<h3>“inherit” is a special property to force inheritance; remember parent-child relationships?</h3>
 </li>
 </ul>
 </article> 
@@ -300,7 +304,7 @@ function shuffleHomework(amt) {
 	<li><h3>Styles are Separate from HTML</h3></li>	
 	<li><h3>Usually only need 1 style sheet</h3></li>
 	<li><h3>Link to CSS in your HTML</h3></li>
-	<li><h3>Your CSS should start with a <a href='http://meyerweb.com/eric/tools/css/reset/'>RESET</a></h3></li>
+	<li><h3>Your CSS should start with a <a href='http://meyerweb.com/eric/tools/css/reset/'>RESET</a></h3>... or at least that's what some people say... <a href='http://snook.ca/archives/html_and_css/no_css_reset/'>But others</a> <a href="http://www.sitepoint.com/css-resets-useful-or-useless/">disagree</a></li>
 	</ul>	
 </article>
 
@@ -517,7 +521,7 @@ p {
 </article>
 
 <article class="slide slide-list">
-<h1>Cascading Hierarchy</h1>
+<h1>Cascading Hierarchy (see <a href="http://www.maxdesign.com.au/articles/css-cascade/">this</a> for more)</h1>
 <ol>
 <li class="slide">
 	<h3>Inline style (those defined directly with a style='....' attribute in the tag)</h3>
@@ -651,7 +655,7 @@ p {
 <h1>Layout Properties</h1>
 <ul>
 <li class="slide">
-	<h3>Content:text the tags are wrapping</h3>
+	<h3>Content: text the tags are wrapping</h3>
 		<ul>
 			<li>color:red;</li>
 			<li>font-size:20px;</li>
@@ -744,10 +748,10 @@ p {
     <h3>Use float:left or float:right to float elements</h3>
 		</li>
 		<li class="slide">
-    <h3>Make sure that elements have a width - floating will squeze elements down</h3>
+    <h3>Make sure that elements have a width (px or percentage) - floating will squeeze elements down</h3>
 		</li>
 		<li class="slide">
-    <h3>Make sure to clear your floats otherwise the container won't have a height</h3>
+    <h3>Make sure to clear your floats otherwise the container won't have a height (what does this mean?)</h3>
 		</li>
 		<li class="slide">
     <h3>You need an extra element to clear, or can use the clearfix</h3>
@@ -837,7 +841,7 @@ p {
 				<h3>Style your Recipe card (create a css sheet, add in class &amp; id hooks to your html if needed)</h3>				
 			</li>
 			<li>
-				<h3>Style  Cats vs. Dogs (we'll apply layout  style later)</h3>
+				<h3>Style  Cats vs. Dogs (we'll apply layout style later)</h3>
 			</li>
 			<li>
 				<h3>Style &amp; Layout of  Llama Love</h3>
