updated reading info to week 4

--- a/webspring-2014-2/4.html
+++ b/webspring-2014-2/4.html
@@ -819,10 +819,7 @@ p {
 <h3 class='slide'>Reading</h3>
 <ul class='slide'>	
 	<li>
-		<h3>Duckett, Chapters 11, 12, 13, 14</h3>
-	</li>
-	<li>
-        <h3><a href='http://coding.smashingmagazine.com/2009/10/05/mastering-css-coding-getting-started/'>Mastering CSS Coding: Getting Started</a>
+        <h3>Review last week's readings—they will be helpful to you this week.
 		</h3>
 	</li>
 	<li>
@@ -831,6 +828,10 @@ p {
 	</li>
 	<li>
         <h3><a href='http://www.alistapart.com/articles/css3-bling-in-the-real-world/'>CSS3 Bling in the Real World</a>
+		</h3>
+	</li>
+	<li>
+        <h3><a href='http://alistapart.com/article/css-floats-101/'>CSS Floats 101</a>
 		</h3>
 	</li>
 </ul>
